Mon Nov  8 07:53:46 2004  Chad Elliott  <elliott_c@ociweb.com>

        * bin/msvc_mpc_auto_compile.pl:

          Added the protocols directory to the ace core directories.

Fri Nov  5 13:44:57 2004  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/config/acedefaults.mpb:

          Added ACE_NO_INLINE=1 to debug_macros only for the bmake project
          type.

Fri Nov  5 18:11:41 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

        * ace/OS_NS_Thread.cpp (thr_create):

          Fixed memory leak that were caused due to allocated
          <thread_args> not being deleted whenever there is an error. Got
          around this problem by using an auto_ptr, and releasing the
          pointer when thr_create () is successful. Thanks to Gary Maxey
          for reporting the problem.

        * ace/Base_Thread_Adapter.h (ACE_Base_Thread_Adapter):

          Moved the destructor to be public and the constructor to be
          private. Making the destructor seems to have more downsides like
          the one above (which basically prevented us from using
          auto_ptr's).

Fri Nov  5 16:14:12 UTC 2004  Martin Corino  <mcorino@remedy.nl>

        * ace/OS_NS_stdlib.cpp:
          Fixed unnecessary inclusion of 'limits' for VxWorks because
          it caused problems with GCC 2.9.6 toolchain.

Fri Nov  5 07:52:51 2004  J.T. Conklin  <jtc@acorntoolworks.com>

        * ace/ACE.cpp:

          Changed gcd() from recursive to iterative implementation.
          A good optimizing compiler should be able to convert the
          tail call to a jump; but some compilers aren't good, and
          sometimes ACE is compiled without optimization.

Fri Nov  5 15:36:12 UTC 2004  Martin Corino  <mcorino@remedy.nl>

        * bin/MakeProjectCreator/templates/gnu.mpd:
        * include/makeinclude/rules.bin.GNU:
          Changes to support VxWorks 5.5.1 linking (both DIAB and GNU