@@ -15,7 +15,6 @@ use FileHandle;
 use File::Basename;
 
 use DependencyGenerator;
-use ObjectGeneratorFactory;
 
 # ************************************************************
 # Subroutine Section
@@ -60,15 +59,14 @@ sub process {
       }
     }
 
-    print $fh "# DO NOT DELETE THIS LINE -- " . basename($0) . " uses it.\n" .
+    print $fh "# DO NOT DELETE THIS LINE -- ", basename($0), " uses it.\n",
               "# DO NOT PUT ANYTHING AFTER THIS LINE, IT WILL GO AWAY.\n\n";
 
     my($dep) = new DependencyGenerator($macros, $ipaths, $replace,
                                        $type, $noinline, $exclude);
-    my($objgen) = ObjectGeneratorFactory::create($type);
     ## Sort the files so the dependencies are reproducible
     foreach my $file (sort @$files) {
-      print $fh $dep->process($file, $objgen->process($file)) . "\n";
+      print $fh $dep->process($file), "\n";
     }
 
     print $fh "# IF YOU PUT ANYTHING HERE IT WILL GO AWAY\n";
