@@ -14,6 +14,7 @@ use strict;
 
 use Preprocessor;
 use DependencyWriterFactory;
+use ObjectGeneratorFactory;
 
 # ************************************************************
 # Subroutine Section
@@ -31,6 +32,7 @@ sub new {
                                                         $ipaths, $exclude),
                          'replace'  => $replace,
                          'dwrite'   => DependencyWriterFactory::create($type),
+                         'objgen'   => ObjectGeneratorFactory::create($type),
                          'noinline' => $noinline,
                         }, $class;
 
@@ -52,17 +54,15 @@ sub new {
 sub process {
   my($self)    = shift;
   my($file)    = shift;
-  my($objects) = shift;
   my($replace) = $self->{'replace'};
-  my($cwd)     = $self->{'cwd'};
 
   ## Generate the dependency string
   my($depstr) = $self->{'dwrite'}->process(
-                   $objects,
+                   $self->{'objgen'}->process($file),
                    $self->{'pre'}->process($file, $self->{'noinline'}));
 
   ## Perform the replacements on the dependency string
-  $depstr =~ s/$cwd//go;
+  $depstr =~ s/$self->{'cwd'}//go;
   foreach my $rep (@{$self->{'repkeys'}}) {
     $depstr =~ s/$rep/$$replace{$rep}/g;
   }
